--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 access_log /var/log/nginx/access_kibana.log main;
 error_log /var/log/nginx/error_kibana.log warn;
 
-include redirect.conf
+include conf.d/redirect.conf;
 
-include kibana.conf
+include conf.d/kibana.conf;
