--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -1,7 +1,10 @@
 server {
     listen 80;
 
-    include letsencrypt.conf
+    location ^~ /.well-known/acme-challenge/ {
+        allow all;
+        root /var/lib/letsencrypt;
+    }
 
     # Everything else gets shunted over to HTTPS
     return 301 https://www.buron.ovh$request_uri;
