--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,6 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-
 events {
     worker_connections  1024;
 }
@@ -34,5 +33,5 @@ stream {
                      '$protocol $status $bytes_sent $bytes_received '
                      '$session_time';
 
-    include /etc/nginx/stream.conf.d/logstash.conf;    
+    include /etc/nginx/stream.d/logstash.conf;    
 }
