--- a/nginx/conf.d/kibana.conf
+++ b/nginx/conf.d/kibana.conf
@@ -2,10 +2,10 @@ server {
     listen 443 ssl;
     server_name buron.ovh;
 
-    # ssl_certificate /etc/letsencrypt/live/buron.ovh/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/buron.ovh/privkey.pem;
-    ssl_certificate /etc/nginx/ssl/kibana.crt;
-    ssl_certificate_key /etc/nginx/ssl/kibana.key;
+    ssl_certificate /etc/letsencrypt/live/buron.ovh/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/buron.ovh/privkey.pem;
+    # ssl_certificate /etc/nginx/ssl/kibana.crt;
+    # ssl_certificate_key /etc/nginx/ssl/kibana.key;
     include ssl-params.conf;
     
     location / {
