--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -1,11 +1,14 @@
 server {
     listen 80;
 
-    location ^~ /.well-known/acme-challenge/ {
+    #for certbot challenges (renewal process)
+    location ~ /.well-known/acme-challenge {
         allow all;
-        root /var/lib/letsencrypt;
+        root /data/letsencrypt;
     }
 
     # Everything else gets shunted over to HTTPS
-    return 301 https://www.buron.ovh$request_uri;
+    location / {
+        return 301 https://www.buron.ovh$request_uri;
+    }
 }
