--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       context: kibana/
     volumes:
       - ./kibana/config/:/usr/share/kibana/config:ro 
+    ports:
+      - "5601:5601"    
     networks:
       - elk
     depends_on:
