--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,5 +1,6 @@
 # https://github.com/elastic/kibana-docker
 FROM docker.elastic.co/kibana/kibana-oss:6.2.4
 
+EXPOSE 5601 
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
